--- a/src/app/pages/appointment/appointment.page.html
+++ b/src/app/pages/appointment/appointment.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="light" style="text-align: center">
     <ion-title>
-    Appointment
+    CALENDARIO
     </ion-title>
 
     <ion-buttons slot="end">
@@ -49,15 +49,15 @@
     <!-- Change the displayed calendar mode -->
     <ion-col size="4">
       <ion-button expand="block" [color]="calendar.mode == 'month' ? 'primary' : 'secondary'"
-        (click)="changeMode('month')">Month</ion-button>
+        (click)="changeMode('month')">Mes</ion-button>
     </ion-col>
     <ion-col size="4">
       <ion-button expand="block" [color]="calendar.mode == 'week' ? 'primary' : 'secondary'"
-        (click)="changeMode('week')">Week</ion-button>
+        (click)="changeMode('week')">Semana</ion-button>
     </ion-col>
     <ion-col size="4">
       <ion-button expand="block" [color]="calendar.mode == 'day' ? 'primary' : 'secondary'" (click)="changeMode('day')">
-        Day</ion-button>
+        Día</ion-button>
     </ion-col>
 
     <!-- Move back one screen of the slides -->
@@ -77,7 +77,7 @@
       </ion-button>
     </ion-col>
   </ion-row>
-
+{{eventSource}}
   <calendar [eventSource]="eventSource" [calendarMode]="calendar.mode" [currentDate]="calendar.currentDate"
     (onEventSelected)="onEventSelected($event)" (onTitleChanged)="onViewTitleChanged($event)"
     (onTimeSelected)="onTimeSelected($event)" startHour="6" endHour="20" step="30" startingDayWeek="1">
