--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,16 +1,31 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="light" style="text-align: center">
     <ion-title>
-      Home
+      INICIO
     </ion-title>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
+<ion-content fullscreen="">
+  <ion-item  [routerLink]="['/appointment2']">
+    <ion-icon ios="ios-calendar" md="md-calendar" slot="start"></ion-icon>
+    <ion-label>Calendario</ion-label>
+  </ion-item> 
+  <ion-item [routerLink]="['/conversation']">
+    <ion-icon ios="ios-chatbubbles" md="md-chatbubbles" slot="start"></ion-icon>
+    <ion-label>Conversaciones</ion-label>
+  </ion-item>
 
-  </div>
+  <ion-item [routerLink]="['/video-room']">
+    <ion-icon ios="ios-videocam" md="md-videocam" slot="start"></ion-icon>
+    <ion-label>Videoconsulta</ion-label>
+  </ion-item>
+  adios
+  <ion-button tab="appointment" >
+    <ion-icon ios="ios-calendar" md="md-calendar"></ion-icon>
+    <ion-label>Calendar</ion-label>
+  </ion-button>
+
 </ion-content>
+
+
