--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,27 +1,33 @@
+<body>
+  <div class="jumbotron">
+    <div class="container">
+      <ion-content fullscreen="" style="--offset-top:76px; --offset-bottom:0px;">
+        <form [formGroup]='loginForm' (ngSubmit)="onSubmit()">
 
-<ion-content fullscreen="" class="hydrated" style="--offset-top:76px; --offset-bottom:0px;">
-        <form  [formGroup]='loginForm' (ngSubmit)="onSubmit()">
-    
           <ion-grid>
             <ion-row color="primary" justify-content-center>
               <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-                <div text-center>
-                  <h3>Login</h3>
-                </div>
+
+                <h2 style="text-align: center">IDENTIFÍCATE</h2>
+
                 <div padding>
                   <ion-item>
-                    <ion-input type="text" formControlName="username"></ion-input>
+                    <ion-input type="text" formControlName="username" placeholder="Usuario"></ion-input>
                   </ion-item>
                   <ion-item>
-                  <ion-input type='password' formControlName="password"></ion-input>
+                    <ion-input type='password' formControlName="password" placeholder="Contraseña"></ion-input>
                   </ion-item>
                 </div>
+
                 <div padding>
-                  <ion-button size="large" type="submit"  expand="block">Login</ion-button>
+                  <ion-button size="large" type="submit" expand="block">Iniciar sesión</ion-button>
                 </div>
               </ion-col>
             </ion-row>
           </ion-grid>
         </form>
 
-    </ion-content>
+      </ion-content>
+    </div>
+  </div>
+</body>
