--- a/src/app/pages/video-room/video-room.page.html
+++ b/src/app/pages/video-room/video-room.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="primary" style="text-align: center">
     <ion-title>
-      Live Video Call
+      VIDEOCONFERENCIA
     </ion-title>
   </ion-toolbar>
 </ion-header>
